--- a/repo/main.tex
+++ b/repo/main.tex
@@ -348,7 +348,7 @@ Coding work of this course research is completed using the \ic{Julia} language \
 
 The project highly relies on the package \ic{DifferentialEquations.jl} \cite{DifferentialEquations}, which provides generic interfaces for numerically solving differential equations, especially ODEs and dynamical systems.
 
-The report document, \LaTeX source code, programs and figures can all be found in \textcolor{blue}{\href{https://github.com/PDE2718/NaiveSDE.jl}{the author's Github repository}}.
+The report document, \LaTeX source code, programs and figures can all be found in \textcolor{blue}{\href{https://github.com/PDE2718/STPHY2023}{the author's Github repository}}.
 
 \newpage
 \printbibliography
